...
@ExperimentalMaterialApi
@Composable
fun SearchGroupsView(viewModel: SearchGroupsViewModel) {
    MyApplicationTheme3 {
        Scaffold(
            modifier = Modifier.semantics {
                contentDescription = "SearchGroupsView"
            },
            topBar = { SearchBar { viewModel.search(it) } },
            bottomBar = {
                NavigationBar(selectedItem = remember { mutableStateOf(1) },
                    clickLeft = { viewModel.navToJoinedGroups() },
                    clickRight = { viewModel.navToProfile() }
...
