...
                }
                MyApplicationTheme3 {
                    Text(
                        text = "Registrieren",
                        modifier = Modifier.align(Alignment.End).padding(end = 12.dp).clickable {
                            viewModel.navToSignUp()
                        }.testTag("RegistrierenSignIn"),
                        fontWeight = FontWeight.Bold,
                        color = MaterialTheme.colorScheme.tertiary
                    )
                }
            }
        }
...
